tests/ui/traits/issue-71036.stderr
error[E0277]: the trait bound `&'a T: Unsize<&'a U>` is not satisfied
  --> $DIR/issue-71036.rs:11:1
   |
LL | impl<'a, T: ?Sized + Unsize<U>, U: ?Sized> DispatchFromDyn<Foo<'a, U>> for Foo<'a, T> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Unsize<&'a U>` is not implemented for `&'a T`
   |
   = note: all implementations of `Unsize` are provided automatically by the compiler, see <https://doc.rust-lang.org/stable/std/marker/trait.Unsize.html> for more information
   = note: required for `&'a &'a T` to implement `DispatchFromDyn<&'a &'a U>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
